# archmind-chatbot

./: .env.example  README.md  chatbot.py  main.py  pyproject.toml
docs/: RAG_GUIDE.md
docs/sample-knowledge/: meridian-company-handbook.md  meridian-raw-dump.md
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(site)/: layout.tsx  page.tsx
frontend/app/(site)/about/: page.tsx
frontend/app/(site)/portfolio/: page.tsx
frontend/app/api/chat/: route.ts
frontend/app/chat/: layout.tsx  page.tsx
frontend/components/: chat-interface.tsx  footer.tsx  fox-avatar.tsx  mascot-chat.tsx  mascot.tsx  message-bubble.tsx  nav.tsx  reveal.tsx
frontend/lib/: image.ts  use-archmind-chat.tsx
