[project]
name = "archmind-chatbot"
version = "0.1.0"
description = "ArchMind — terminal-based architectural AI assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "watchfiles>=1.2.0",
]

[project.scripts]
archmind = "main:main"
